--- a/amarnath-packages.html
+++ b/amarnath-packages.html
@@ -100,12 +100,13 @@
 
     <!-- Navbar & Hero Start -->
     <div class="container-fluid position-relative p-0">
-        <nav
+      <nav
         class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0"
       >
         <a href="" class="navbar-brand p-0">
           <h1 class="text-primary m-0">
-            <img src="./img/trek-de-kashmir.png" />TrekDekashmir
+            <span style="color: #fff; margin-right: -0.4em; font-weight: 400; position: relative;
+            top: 1em;">&trade;</span> <img src="./Logo/new trek de kashmior/avi.png" />  TrekDekashmir 
           </h1>
           <!-- <img src="img/logo.png" alt="Logo"> -->
         </a>
@@ -120,19 +121,19 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto py-0">
             <a href="index.html" class="nav-item nav-link active">Home</a>
-            <a href="about.html" class="nav-item nav-link">About</a>
-            <a href="service.html" class="nav-item nav-link">Services</a>
             <a href="package.html" class="nav-item nav-link">Packages</a>
             <a href="destination.html" class="nav-item nav-link">Destination</a>
             <a href="local-sightseen.html" class="nav-item nav-link">Local Sightseen</a>
+            <!-- <a href="service.html" class="nav-item nav-link">Services</a> -->
             <div class="nav-item dropdown">
               <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                >Pages</a
+              href="#"
+              class="nav-link dropdown-toggle"
+              data-bs-toggle="dropdown"
+              >Pages</a
               >
               <div class="dropdown-menu m-0">
+                <a href="service.html" class="dropdown-item">Services</a>
                 <a href="transport.html" class="dropdown-item">Transport</a>
                 <a href="booking.html" class="dropdown-item">Booking</a>
                 <a href="./hotels.html" class="dropdown-item">Hotels</a>
@@ -140,8 +141,9 @@
               </div>
             </div>
             <a href="contact.html" class="nav-item nav-link">Contact</a>
+            <a href="about.html" class="nav-item nav-link">About</a>
           </div>
-          <a href="" class="btn btn-primary rounded-pill py-2 px-4">Register</a>
+          <button href="" class="btn btn-primary rounded-pill py-2 px-4" onclick="openPopup()">Register</button>
         </div>
       </nav>
 
@@ -395,10 +397,10 @@
           <div class="row">
             <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
               &copy;
-              <a class="border-bottom" href="https://freewebsitecode.com"
+              <a class="border-bottom" href=""
                 >2023TrekDekashmir</a
               >, All Right Reserved. Designed By
-              <a class="border-bottom" href="https://freewebsitecode.com"
+              <a class="border-bottom" href="https://mail.google.com/mail/?view=cm&to=chowdharymateen0@gmail.com"
                 >Mateen Chowdhary.</a
               >
             </div>
