--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <div class="navigation-btns">
         <button onclick="previousQuestion(0)" style="display: none;">Previous</button>
         <button onclick="closePopup()">Close</button>
-        <button onclick="nextQuestion(2)">Next</button>
+        <button onclick="nextQuestion()">Next</button>
       </div>
     </div>
     <!-- Pop Up end -->
