--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="row justify-content-center py-5">
             <div class="col-lg-10 pt-lg-5 mt-lg-5 text-center">
               <h1 class="display-3 text-white mb-3 animated slideInDown">
-                "Unearth the treasures of Jammu and Kashmir
+                "Unearth the treasures of Jammu and Kashmir"
               </h1>
               <p class="fs-4 text-white mb-4 animated slideInDown">
                 One valley at a time.
